Migrate to complication-based outcomes: optional long-term, schema coercions, validation warnings, docs + CLI help, robust exposure sum, regularized logit fallback; add UPGRADE guide

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "stress-surgery"
 version = "0.1.0"
-description = "Analysis of surgical success under air-raid siren stress"
+description = "Analysis of surgical complications under air-raid siren stress"
 readme = "MAIN_README.md"
 authors = [{name = "OpenAI", email = "info@example.com"}]
 requires-python = ">=3.11"
